src/objects/StandbyApplication__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>备用机申请</relationshipLabel>
        <relationshipName>BYJSQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>地址</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <formula>CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>申请人</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationDate__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>申请日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consignee__c</fullName>
        <label>收货人</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHKD__c</fullName>
        <label>要求到货期及快递方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>CreatedBy.LfourDepartment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHKD__c</fullName>
        <label>发货快递</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHMX__c</fullName>
        <label>发货明细</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FHR__c</fullName>
        <label>返回人</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHaddress__c</fullName>
        <label>返回地点</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHdate__c</fullName>
        <label>发货时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FHxq__c</fullName>
        <label>返回详情</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FaiHDate__c</fullName>
        <label>返回时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FaultEquipmentSerialNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>故障设备序列号</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>备用机申请</relationshipLabel>
        <relationshipName>KsPZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FaultEquipmentType__c</fullName>
        <formula>FaultEquipmentSerialNumber__r.ProductModelCG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>故障设备型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fhstate__c</fullName>
        <label>返回状态</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>text(NumberMachine__r.Vendor__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>厂商</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberMachine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>所申请备用机序列号</label>
        <referenceTo>BackupMachineResources__c</referenceTo>
        <relationshipLabel>备用机申请</relationshipLabel>
        <relationshipName>Je5o</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OddNumbers__c</fullName>
        <label>单号</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>联系电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RequirementConfiguration__c</fullName>
        <label>备用机需求配置</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReserveProperty__c</fullName>
        <label>备用性质</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>返厂备用</fullName>
                </value>
                <value>
                    <fullName>维修备用</fullName>
                </value>
                <value>
                    <fullName>销售支持</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPstate__c</fullName>
        <label>审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>待审批</fullName>
                </value>
                <value>
                    <fullName>已审批</fullName>
                </value>
                <value>
                    <fullName>已拒绝</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StandbyMachineType__c</fullName>
        <formula>NumberMachine__r.BackupMachineModel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>所申请备用机型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>电话</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <formula>Account__r.Name   &amp;&quot;-&quot;&amp; StandbyMachineType__c 
&amp;&quot;-&quot;&amp; NumberMachine__r.Name &amp;&quot;-&quot;&amp; Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>主题</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>服务请求</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>case2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>备用机申请</relationshipLabel>
        <relationshipName>IHSq</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>备用机申请</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Theme__c</columns>
        <columns>case__c</columns>
        <columns>ReserveProperty__c</columns>
        <columns>StandbyMachineType__c</columns>
        <columns>NumberMachine__c</columns>
        <columns>Account__c</columns>
        <columns>Department__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Field1__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
        <language>zh_CN</language>
    </listViews>
    <nameField>
        <displayFormat>BYJSQ-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>备用机申请编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>备用机申请</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>